--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prod": "next export"
+    "lint": "next lint"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
